[tool.poetry]
name = "aiogram-media-group"
version = "0.5.0"
description = "Aiogram handler for media groups (also known as albums)"
authors = ["deptyped <deptyped@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/deptyped/aiogram-media-group"
repository = "https://github.com/deptyped/aiogram-media-group"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = ">2 || >3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", extras = ["d"]}
aioredis = "^2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
